objects/SMAX_PS_Service_Issue__c.object
<CustomObject>
    <label>Service Issue</label>
    <nameField>
        <displayFormat>SI-{00000000}</displayFormat>
        <label>Service Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <formula>NOW()-CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many Days ago was this created?  Not stopped when resolved</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_in_Days__c</fullName>
        <formula>ROUND(Age__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issue</fullName>
                    <default>true</default>
                    <label>Issue</label>
                </value>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Actor__c</fullName>
        <label>Actor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRC - Customer Care</fullName>
                </value>
                <value>
                    <fullName>TS - Tech Support</fullName>
                </value>
                <value>
                    <fullName>FSE - Field Service Engineer</fullName>
                </value>
                <value>
                    <fullName>FSM - Field Service Manager</fullName>
                </value>
                <value>
                    <fullName>ENT - Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Detail__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Device__c</fullName>
        <label>Device</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Browser</fullName>
                    <default>true</default>
                    <label>Browser</label>
                </value>
                <value>
                    <fullName>FSA laptop</fullName>
                </value>
                <value>
                    <fullName>FSA iPad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Record__c</fullName>
        <inlineHelpText>Copy and paste the URL from the record you were on when you encountered the issue.</inlineHelpText>
        <label>Record</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Denied</fullName>
                    <label>As Designed</label>
                </value>
                <value>
                    <fullName>Business Review</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Future</fullName>
                </value>
                <value>
                    <fullName>JIRA</fullName>
                </value>
                <value>
                    <fullName>Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Test Script Issue</fullName>
                </value>
                <value>
                    <fullName>Business Reviewed - No Further Action</fullName>
                </value>
                <value>
                    <fullName>Business Reviewed - Action Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_JIRA_ID__c</fullName>
        <label>JIRA ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Summary__c</fullName>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Critical</fullName>
                </value>
                <value>
                    <fullName>2 - High</fullName>
                </value>
                <value>
                    <fullName>3 - Medium</fullName>
                </value>
                <value>
                    <fullName>4 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Severity__c</fullName>
        <label>Severity</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                    <label>1 - Critical</label>
                </value>
                <value>
                    <fullName>Major</fullName>
                    <label>2 - Major</label>
                </value>
                <value>
                    <fullName>Minor</fullName>
                    <label>3 - Minor</label>
                </value>
                <value>
                    <fullName>Cosmetic</fullName>
                    <label>4 - Cosmetic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_Step_Number__c</fullName>
        <label>Step Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Script_Number__c</fullName>
        <description>UAT script number</description>
        <inlineHelpText>UAT script number - e.g. ITV-17-006-002-0007</inlineHelpText>
        <label>Script Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Status_Reason__c</fullName>
        <label>Status Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Ready_for_Retest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Retest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Approved_by_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved by Business</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>